[fix] history panel dark mode hover

--- a/packages/flat-components/src/components/HomePage/RoomList/RoomListItem/style.less
+++ b/packages/flat-components/src/components/HomePage/RoomList/RoomListItem/style.less
@@ -183,17 +183,10 @@
     .room-list-item {
         border-color: var(--grey-8);
 
-        &::before {
-            background: var(--grey-9);
-        }
-
         &:hover {
-            .room-list-item-content {
-                background-color: var(--grey-11);
-            }
-        }
+                background-color: var(--grey-12);
     }
-
+    }
     .room-list-item-uuid.active,
     .room-list-item-uuid:hover {
         background-color: var(--grey-10);
